# Resourceful

./: .clang-format  .gitignore  CMakeLists.txt  CTestConfig.cmake  License.txt  README.md
Resourceful/: CMakeLists.txt  Config_build.h.in  Filesystem.h  Resourceful.cpp  Resourceful.h
Resourceful/plugins/: CMakeLists.txt  cat.cpp  dog.cpp  parrot.cpp
Resourceful/test/: CMakeLists.txt
Source/: CMakeLists.txt  RFLResource.cc  RFLResource.h  Resourceful.cpp  ResourcefulBasic.cpp  binreloc.c.in  binreloc.h.in  resourceful_binreloc.c  resourceful_binreloc.h  resourceful_config.h.in  startupScript
Tests/: CMakeLists.txt
cmake/: Resourceful.pc.in  ResourcefulConfig.cmake.in
cmake/binreloc/: GenerateBinreloc.cmake  _binreloc.c.in  _binreloc.h.in
programs/: CMakeLists.txt  rsf_library.cc  rsf_simple.cc
resources/: Resourceful.json
